# currency_rate

./: .env  .gitignore  Dockerfile  README.dev.md  README.md  celerybeat-schedule  docker-compose.yml  pyproject.toml
apps/currency/: admin.py  filters.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/currency/management/commands/: seed.py
apps/currency/migrations/: 0001_initial.py
apps/user/: admin.py  managers.py  models.py  urls.py
apps/user/management/commands/: admin.py
apps/user/migrations/: 0001_initial.py
core/: celery.py  settings.py  urls.py
